src/client/styles/style.scss
body {
  background-color: #2DA9AE;
  color:white;
}

.contentContainer {
  position: absolute;
  display: flex;
  flex-direction: row;
  background-color: orange;
  height: calc(100% - 80px);
  width: calc(100% - 16px)
}

.leftPanel {
  flex: 1;
  flex-basis: 428px;
  background-color: #1baae1;
  overflow: auto;
  color:white;
}

.mainContent {
  flex: 2;
  flex-basis: 80%;
  background-color: #1baae1;
  display: flex;
  flex-direction: row;
  color:white;
}

.map {
  flex: 1;
  flex-basis: 70%;
}

.categories {
  flex: 2;
  flex-basis: 30%;
  overflow: auto;
  background-color: white;
  overflow-y: scroll;
}


.appBarButtonsContainer {
  height: 48px;
}

.loginSignupTextFields {
  width: 100% !important;
}

.dialogTitle {
  text-align:center;
}

//styling for close X button in the Log In / Sign Up dialogs
.closeXButton {
  position: absolute !important;
  left: calc(100% - 55px) !important;
  bottom: calc(100% - 55px) !important;
  div {
    font-size: 24px;
    font-weight: bold;
  }
}

.circle {
  margin: 0;
  text-align: center;
  vertical-align: middle;
  line-height: 32px;
  font-weight: bold;
  color: black;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  border: 2px solid black;
}

.map-marker__marker {
  &.map-marker__marker--big {
    background-image: url('../assets/map_icon_text_indigo.svg');
  }
}

.marker-tooltip {
  z-index: 1010000 !important;
}

.preferences-header {
  text-align: center;
  font-weight: bold !important;
  font-size: 22px !important;
  font-family: Georgia, serif;
}

